update some content

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- ----------BOOTSTRAP SECTION--------------- -->    
     <link rel="stylesheet" href="style.css">
-    <title>Daoist Portfolio</title>
+    <title>Jerome Dev</title>
 </head>
 
 <body>
@@ -27,7 +27,7 @@
             <nav class=" fixed-top navbar navbar-expand-lg navbar-dark bg-dark" 
             style="background-color:#24232360 !important;">
                 <div class="container-fluid">
-                    <a href="#" class="header-brand">PORT<span class="header-brand__span">FOLIO</span></a>
+                    <a href="#" class="header-brand">JEROME<span class="header-brand__span">DEV</span></a>
                     
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -45,7 +45,7 @@
             </nav>
             <div class="header-text">
                 <h1>Jerome Ballena</h1>
-                <h2 style="text-align: center;">Freelance Front-end <span class="header-text__span">Web Developer</span>
+                <h2 style="text-align: center;">NFT Enthusiast &<span class="header-text__span"> Web Developer</span>
                 </h2>
             </div>
                 <!-- Mobile 600px Responsive -->
@@ -114,8 +114,8 @@
                 <div class="contact__row">
                     <div class="contact-left">
                              <h2>Contact Me</h2>
-                            <p><i class="fa-sharp fa-solid fa-envelope-circle-check"></i>youremail.com</p>
-                            <p><i class="fa-solid fa-phone"></i>09270000000</p>  
+                            <p><i class="fa-sharp fa-solid fa-envelope-circle-check"></i>jeromeballena.dev@gmail.com</p>
+                            <p><i class="fa-solid fa-phone"></i>09356069548</p>  
                              <div class="contact-left__icons">
                                 <a href="https://www.facebook.com/rome.star.21" target="_blank"><i class="fa-brands fa-facebook"></i></a>
                                 <a href="https://www.instagram.com/daoistgreed" target="_blank"><i class="fa-brands fa-instagram"></i></a>
