updated some contents

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
                <!-- Mobile 600px Responsive -->
             <div class="header__image"><img src="https://raw.githubusercontent.com/daoistcoder/image-resources/main/g.png" alt="Mobile 600px responsive header img"></div>
                <!-- Mobile 600px Responsive -->
-            <nav class=" fixed-top navbar navbar-expand-lg navbar-dark bg-dark" 
-            style="background-color:#24232360 !important;">
+            <nav class=" fixed-top navbar navbar-expand-lg navbar-dark bg-dark" style="background-color:#24232360 !important;">
                 <div class="container-fluid">
                     <a href="#" class="header-brand">JEROME<span class="header-brand__span">DEV</span></a>
                     
@@ -66,8 +65,11 @@
         <div class="about">
             <div class="about-text">
                 <h2>ABOUT ME</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis fugit in a nemo reprehenderit
-                    harum? Alias nesciunt aliquid, debitis asperiores corrupti quia.</p>
+                <p>
+                    Hi there! 👋 looking for Full-stack Developer? I'm your all-in-one friendly Dev, dedicated
+                    in building seamless web applications. DB, Responsive FE design, Workflows and Personalized UX.
+                    I’ve got all your Full-stack needs. So, If the connection feels right, Let's connect 😉!
+                </p>
             </div>
             <div class="about-skills">
 
@@ -119,10 +121,10 @@
                              <div class="contact-left__icons">
                                 <a href="https://www.facebook.com/rome.star.21" target="_blank"><i class="fa-brands fa-facebook"></i></a>
                                 <a href="https://www.instagram.com/daoistgreed" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                                <a href="https://www.linkedin.com/in/rome-rome-b8807a170/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                                <a href="https://www.linkedin.com/in/jerome-ballena-dev/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                                 <a href="https://twitter.com/daoist_sol" target="_blank"><i class="fa-brands fa-twitter"></i></a>
                             </div>
-                            <a href="downloads/sample-cv.pdf" target="_blank" class="contact__btn contact__btn--1">Download CV</a>
+                            <a href="downloads/Jerome-Ballena-CV.pdf" target="_blank" class="contact__btn contact__btn--1">Download CV</a>
                     </div>
                     <div class="contact-right">
                         <form action="">
@@ -179,7 +181,7 @@
 
     <footer>
         <div class="footer">
-            <h2>&#169; Copyright 2023 - Jerome Ballena</h2>
+            <h2>&#169; Copyright 2024 - Jerome Ballena</h2>
             <div class="footer__container">
             </div>
         </div>
