--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <div class="header__image"><img src="https://raw.githubusercontent.com/daoistcoder/image-resources/main/g.png" alt="Mobile 600px responsive header img"></div>
                <!-- Mobile 600px Responsive -->
             <nav class="fixed-top navbar navbar-expand-lg navbar-dark bg-dark custom-bg">
-                <div class="container-fluid">
+                <div class="container-fluid custom-nav">
                     <a href="#" class="header-brand">JEROME<span class="header-brand__span">DEV</span></a>
                     
-                    <button class="navbar-toggler me-3" type="button" data-bs-toggle="collapse"
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
                     </button>
