comment about items section

--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
                     I’ve got all your Full-stack needs. So, If the connection feels right, Let's connect 😉!
                 </p>
             </div>
-            <div class="about-skills">
+            <!-- <div class="about-skills">
 
                 <h3 class="about-skills__h3--1">Skills</h3>
                 <h3 class="about-skills__h3--2">Experience</h3>
                 <h3 class="about-skills__h3--3">Education</h3>
-            </div>
+            </div> -->
             <!-- <div class="about-content">
                 <p class="about-content__p--1">Skills Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium, dolor.</p>
                 <p class="about-content__p--2">Experience Lorem ipsum dolor sit amet.</p>
